force-app/main/default/objects/B2B_Metadata_Service__c/B2B_Metadata_Service__c.object-meta.xml
<CustomObject>
    <description>This object holds all needed metadata info and translations for fields and picklists.</description>
    <label>B2B Metadata Service</label>
    <nameField>
        <displayFormat>MDS-{0000000000}</displayFormat>
        <label>B2B Metadata Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Metadata Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>