force-app/main/default/objects/B2B_Metadata_Service__c/fields/B2B_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Field_Name__c</fullName>
    <description>Holds the field name where metadata needs to be created or updated.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>