force-app/main/default/objects/B2B_Metadata_Service__c/fields/B2B_Picklist_API_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Picklist_API_Name__c</fullName>
    <description>This field holds the API name of the picklist value, which needs to be added or updated.</description>
    <label>Picklist API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>